--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: neom_instruments
 description: Instruments and Genres for Cyberneom.
-version: 1.0.3
+version: 1.1.0
 homepage: https://github.com/Cyberneom/neom_instruments
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
@@ -34,7 +34,12 @@ dependency_overrides:
     path: ../neom_posts
   neom_inbox:
     path: ../neom_inbox
-  intl: 0.18.1
+  neom_music_player:
+    path: ../neom_music_player
+  http: 1.1.0
+  uuid: 4.1.0
+  logger: 2.0.2+1
+  google_api_headers: 2.0.3
 
 # The following section is specific to Flutter packages.
 flutter:
