--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: neom_instruments
 description: Instruments and Genres for Cyberneom.
-version: 1.1.1
+version: 1.1.3
 homepage: https://github.com/Cyberneom/neom_instruments
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
@@ -14,13 +14,13 @@ dependencies:
 
   neom_commons:
     git:
-      url: https://github.com/Cyberneom/neom_commons.git
-  neom_posts:
-    git:
-      url: https://github.com/Cyberneom/neom_posts.git
+      url: git@github.com:Cyberneom/neom_commons.git
   neom_inbox:
     git:
-      url: https://github.com/Cyberneom/neom_inbox.git
+      url: git@github.com:Cyberneom/neom_inbox.git
+  neom_posts:
+    git:
+      url: git@github.com:Cyberneom/neom_posts.git
 
 dev_dependencies:
   flutter_test:
@@ -28,18 +28,15 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 dependency_overrides:
-  neom_commons:
-    path: ../neom_commons
-  neom_posts:
-    path: ../neom_posts
-  neom_inbox:
-    path: ../neom_inbox
-  neom_music_player:
-    path: ../neom_music_player
+#  neom_commons:
+#    path: ../neom_commons
+#  neom_posts:
+#    path: ../neom_posts
+#  neom_inbox:
+#    path: ../neom_inbox
+#  neom_music_player:
+#    path: ../neom_music_player
   uuid: 4.1.0
   logger: 2.0.2+1
-#  http: 1.1.0
-#  google_api_headers: 2.0.3
 
-# The following section is specific to Flutter packages.
 flutter:
