--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: neom_instruments
-description: Instruments and Genres for Cyberneom.
+description: Instruments and Genres for Open Neom.
 version: 1.3.0
 homepage: https://github.com/Cyberneom/neom_instruments
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
